# BoardGameHub

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  DELIVERABLES_USER.md  README.md  locustfile.py  pyproject.toml  pytest.ini  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
src/: __init__.py  crud.py  db.py  main.py  models.py  schemas.py
src/api/: __init__.py  games.py  groups.py  users.py
src/services/: group_service.py
tests/: conftest.py  test_games.py  test_groups.py  test_users.py
tests/performance/: locustfile.py
