[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "boardgamehub"
version = "0.1.0"
description = "BoardGameHub API, Streamlit UI, and quality tooling"
authors = ["BoardGameHub Contributors"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.100.0"
uvicorn = { version = ">=0.22.0", extras = ["standard"] }
sqlmodel = ">=0.0.14"
sqlalchemy = ">=2.0.0"
python-dotenv = ">=1.0.0"
httpx = ">=0.24.0"
streamlit = ">=1.28.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
flake8 = ">=6.0.0"
bandit = ">=1.7.5"
radon = ">=6.0.0"
pre-commit = ">=3.0.0"
locust = ">=2.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=60",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 60
